--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@langchain/core": "^0.3.15",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
