--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "repl:dev": "nest start --watch --entryFile repl",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -28,6 +29,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "dotenv": "^16.4.5",
+    "faiss-node": "^0.5.1",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.5",
     "reflect-metadata": "^0.1.13",
