--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@langchain/community": "^0.3.10",
     "@langchain/core": "^0.3.15",
+    "@langchain/openai": "^0.3.12",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^9.0.0",
@@ -34,7 +35,8 @@
     "langchain": "^0.3.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
