--- a/package.json
+++ b/package.json
@@ -21,45 +21,45 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@langchain/community": "^0.3.10",
-    "@langchain/core": "^0.3.15",
-    "@langchain/openai": "^0.3.12",
-    "@nestjs/common": "^9.0.0",
+    "@langchain/community": "^0.3.34",
+    "@langchain/core": "^0.3.42",
+    "@langchain/openai": "^0.3.17",
+    "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^9.0.0",
-    "dotenv": "^16.4.5",
+    "@nestjs/core": "^9.4.3",
+    "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/platform-express": "^9.4.3",
+    "dotenv": "^16.4.7",
     "faiss-node": "^0.5.1",
     "jsonwebtoken": "^9.0.2",
-    "langchain": "^0.3.5",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "zod": "^3.23.8",
-    "zod-to-json-schema": "^3.23.5"
+    "langchain": "^0.3.19",
+    "reflect-metadata": "^0.1.14",
+    "rxjs": "^7.8.2",
+    "zod": "^3.24.2",
+    "zod-to-json-schema": "^3.24.3"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
+    "@nestjs/cli": "^9.5.0",
+    "@nestjs/schematics": "^9.2.0",
+    "@nestjs/testing": "^9.4.3",
+    "@types/express": "^4.17.21",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "@types/supertest": "^2.0.16",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "29.5.0",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
+    "prettier": "^2.8.8",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.4",
     "ts-jest": "29.1.0",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.8.2"
   },
   "jest": {
     "moduleFileExtensions": [
