build(dependencies): 添加 @huggingface/transformers 依赖
- 在 package.json 中添加 @huggingface/transformers 作为项目依赖
- 版本设置为 ^3.4.0，允许兼容的版本升级

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@huggingface/transformers": "^3.4.0",
     "@langchain/community": "^0.3.34",
     "@langchain/core": "^0.3.42",
     "@langchain/openai": "^0.3.17",
