--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^9.4.3",
     "dotenv": "^16.4.7",
+    "duck-duck-scrape": "^2.2.7",
     "faiss-node": "^0.5.1",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.19",
