feat(langgraph): 添加 LangGraph API 支持
- 新增 graph 文件夹，包含 graph.ts 和 state.ts 文件
- 添加 LangGraph相关依赖到 package.json
- 更新 .gitignore 文件，忽略 LangGraph API 相关内容
- 创建 langgraph.json 配置文件

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "repl:dev": "nest start --watch --entryFile repl",
+    "graph": "npx @langchain/langgraph-cli dev",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -24,6 +25,8 @@
     "@huggingface/transformers": "^3.4.0",
     "@langchain/community": "^0.3.34",
     "@langchain/core": "^0.3.42",
+    "@langchain/langgraph": "^0.2.56",
+    "@langchain/langgraph-cli": "^0.0.17",
     "@langchain/openai": "^0.3.17",
     "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^3.3.0",
