--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@langchain/community": "^0.3.34",
     "@langchain/core": "^0.3.42",
     "@langchain/langgraph": "^0.2.56",
+    "@langchain/langgraph-checkpoint": "^0.0.16",
     "@langchain/langgraph-cli": "^0.0.17",
     "@langchain/openai": "^0.3.17",
     "@nestjs/common": "^9.4.3",
