--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@langchain/langgraph": "^0.2.56",
     "@langchain/langgraph-checkpoint": "^0.0.16",
     "@langchain/langgraph-cli": "^0.0.17",
+    "@langchain/mcp-adapters": "^0.3.4",
     "@langchain/openai": "^0.3.17",
+    "@modelcontextprotocol/sdk": "^1.8.0",
     "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^9.4.3",
