chore: 添加 Model Context Protocol相关脚本
- 在 package.json 中添加了两个新的脚本命令：
  - mcp:inspector 启动 MCP 协议的检查工具
  - mcp 启动 MCP 客户端
- 这些脚本便于开发和调试 Model Context Protocol 相关功能

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "repl:dev": "nest start --watch --entryFile repl",
     "graph": "npx @langchain/langgraph-cli dev",
+    "mcp:inspector": "npx @modelcontextprotocol/inspector node ./mcp/mcp.server.js",
+    "mcp": "tsx ./mcp/mcp.client.ts",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
