feat(study): 添加向量数据库服务
- 新增 StudyVectorstoreService 服务
- 实现了添加数据到 Pinecone 向量数据库的功能
- 添加了多查询检索器的实现
- 引入了 PineconeEmbeddings 和 PineconeStore 组件

--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "@langchain/langgraph-cli": "^0.0.17",
     "@langchain/mcp-adapters": "^0.3.4",
     "@langchain/openai": "^0.3.17",
+    "@langchain/pinecone": "^0.2.0",
     "@modelcontextprotocol/sdk": "^1.8.0",
     "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^9.4.3",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^9.4.3",
+    "@pinecone-database/pinecone": "^5.1.1",
     "dotenv": "^16.4.7",
     "duck-duck-scrape": "^2.2.7",
     "faiss-node": "^0.5.1",
