--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^9.4.3",
     "@pinecone-database/pinecone": "^5.1.1",
+    "@zilliz/milvus2-sdk-node": "^2.5.7",
     "dotenv": "^16.4.7",
     "duck-duck-scrape": "^2.2.7",
     "faiss-node": "^0.5.1",
