--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@langchain/openai": "^0.3.17",
     "@langchain/pinecone": "^0.2.0",
     "@modelcontextprotocol/sdk": "^1.8.0",
+    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^9.4.3",
@@ -44,6 +45,7 @@
     "dotenv": "^16.4.7",
     "duck-duck-scrape": "^2.2.7",
     "faiss-node": "^0.5.1",
+    "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.19",
     "reflect-metadata": "^0.1.14",
